# porpoise

./: CMakeLists.txt  Readme.md
CMake/: Deko3D.cmake  NXVK.cmake
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp  CMakeLists.txt  HorizonSoundStream.cpp  HorizonSoundStream.h
Source/Core/Common/: Arm64Emitter.cpp  Arm64Emitter.h  CMakeLists.txt  CodeBlock.h  CommonFuncs.cpp  CommonPaths.h  DirectIOFile.cpp  DynamicLibrary.cpp  FileUtil.cpp  FilesystemWatcherHorizon.cpp  HorizonFastmem.h  HostCodeMemory.h  HostCodeMemoryHorizon.cpp  HttpRequestHorizon.cpp  IniFile.cpp  MemArena.h  MemArenaHorizon.cpp  MemoryUtil.cpp  MemoryUtil.h  MsgHandler.cpp  Network.cpp  Thread.cpp  Thread.h  Timer.cpp  WindowSystemInfo.h
Source/Core/Common/Logging/: LogManager.cpp
Source/Core/Core/: CMakeLists.txt  Core.cpp  MachineContext.h  MemTools.cpp  NetPlayServer.cpp
Source/Core/Core/Config/: MainSettings.h
Source/Core/Core/HW/: GCPadEmu.cpp
Source/Core/Core/HW/DVD/: AMMediaboard.cpp
Source/Core/Core/HW/EXI/: EXI_DeviceEthernet.h  EXI_DeviceModem.cpp
Source/Core/Core/HW/WiimoteEmu/: WiimoteEmu.cpp
Source/Core/Core/IOS/Network/: Socket.h
Source/Core/Core/PowerPC/: GDBStub.cpp  GDBStub.h
Source/Core/Core/PowerPC/JitArm64/: Jit.cpp  JitAsm.cpp
Source/Core/Core/PowerPC/JitCommon/: JitBase.cpp
Source/Core/DolphinSwitch/: CMakeLists.txt  CrashHandlerSwitch.cpp  GamePickerSwitch.cpp  GamePickerSwitch.h  HorizonCompatSwitch.cpp  HorizonExceptionEntry.S  HorizonExceptionEntry.h  HostSwitch.cpp  MainSwitch.cpp  PerformanceOverlaySwitch.cpp  PerformanceOverlaySwitch.h  PlatformSwitch.cpp  PlatformSwitch.h
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp
Source/Core/UICommon/: UICommon.cpp
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/Deko3D/: CMakeLists.txt  Constants.h  DKBoundingBox.h  DKCommandBufferManager.cpp  DKCommandBufferManager.h  DKContext.cpp  DKContext.h  DKGfx.cpp  DKGfx.h  DKMain.cpp  DKPerfQuery.h  DKPipeline.h  DKShader.h  DKStreamBuffer.cpp  DKStreamBuffer.h  DKSwapChain.cpp  DKSwapChain.h  DKTexture.cpp  DKTexture.h  DKVertexManager.cpp  DKVertexManager.h  VideoBackend.h
Source/Core/VideoBackends/Vulkan/: VKSwapChain.cpp  VulkanContext.cpp  VulkanEntryPoints.inl  VulkanLoader.cpp  VulkanLoader.h
Source/Core/VideoCommon/: AsyncShaderCompiler.cpp  CMakeLists.txt  DriverDetails.cpp  DriverDetails.h  PerformanceMetrics.cpp  VideoBackendBase.cpp
(+6 files in other folders)
